<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_trivial"
    android:orientation="vertical"
    tools:context=".MantActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

    </androidx.recyclerview.widget.RecyclerView>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_pregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/pregunta"
            android:inputType="textNoSuggestions|textPersonName"
            android:textColor="@color/texto"
            android:textColorHint="#6C6C6C" />

        <EditText
            android:id="@+id/et_explicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/explicacion"
            android:inputType="textNoSuggestions|textPersonName"
            android:textColor="@color/texto"
            android:textColorHint="#6C6C6C" />

        <CheckBox
            android:id="@+id/cb_verdadero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/verdadero"
            android:textColor="@color/texto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="Modificar" />

            <Button
                android:id="@+id/btn_crear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/crear" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>